# helloWorldC

./: .gitignore  build_debug.sh  build_release.sh  clean_debug.sh  clean_release.sh  configure_debug.sh  configure_release.sh  deep_clean.sh
code/: CMakeLists.txt
code/src/: CMakeLists.txt  ball.c  ball.h  main.c
code/src/objects/: CMakeLists.txt  ball.h
code/src/phys/: CMakeLists.txt  physConstants.h
